*click-didyoumean-0.0.3 (27 Sep 2021)

  27 Sep 2021;  <chymera@gentoo.org> +click-didyoumean-0.0.3.ebuild,
  +metadata.xml:
  dev-python/click-didyoumean: new package (DANDI stack)