@@ -1,1 +1,2 @@
-DIST click-didyoumean-0.0.3.tar.gz 4283 SHA256 ef16f88ac939242400be281d4d5a90303320111a8cc0838ce08f83094f0b1376 SHA512 6e832881817645eb8fa3a40acaab74a7f0dcc798aa984781a011b2ef78da2a4ae71ff2d58907bcbb35adbfc659727223c28c3622788eef05ecbdf758d6ac889d WHIRLPOOL 1f058188e56e2c72ae9368096f133e13141eb36c3685f7716876b405d8074dec0b0f8e8c2fb267c75ad1e69b6c81ebb98ac40a42c9a4ba832ef5d92c5d997aac
+DIST click-didyoumean-0.1.0.tar.gz 2343 SHA256 0d5d412fd670caec17e7c12d053de13c14790b196056082c83e61c5541a3c50a SHA512 5079bcab1701b05767d4b53302baa7f05b59af7f8d4644f6bdad9c4bbcb77673b535828726f401d442b5cb39f45073f75b43204199ddddf3d0ec133eb86b65b7 WHIRLPOOL 65193110e062f1c6f499c9a740b33f57fad23299c2a6d652710aa9c60c21ba591b3e42035752f089db51e18f9abb66aa4312e212f5c3bc5b91d39ae39d09f8db
+DIST click-didyoumean-0.2.0.tar.gz 2413 SHA256 00136c217f7fb2ab2999c272cfbd0c14cd2d6c7a643318a954357e2fc3ea7beb SHA512 1934423a36ef03a3603676b8424cfe619972544fc9d7165f388514d01364872b972069466aee03d696da08cd17653ef4f245dab6acc5f2aba3310da00102ff6a WHIRLPOOL 6746b14375eee12b8bdf813fd53b751a09ce219d806cbcde0926e67c8a36f7dd52954e14be04ca464421323b331e3d7aad22bc2ae2db93e98edefefc2af82b76
